src/test/contracts/negative/pattern_matching_anomalies/redundant_case/c1_c2_c3_c1.jsligo
type t = ["One", int] | ["Two", nat] | ["Three"]

let s = (x : t) : unit => 
  match(x, {
    One:   (a : int) => unit,
    Two:   (c : nat) => unit,
    Three: ()        => unit,
    One:   (b : int) => unit,
  })